# Codebase_js

./: Validation.py.py  optimized.py
LLM_categorizer/: acess2.py
Pipeline_customer_inteligence/: README.md  pyproject.toml  register_head.py  serve_head.py
Pipeline_customer_inteligence/cicd/: Containerfile
Pipeline_customer_inteligence/init_scripts/: install_packages.sh
Pipeline_customer_inteligence/jobs/: Train_Register_Serve.yml
Pipeline_customer_inteligence/src/: train.py
Serve_pipeline_model/: CODEOWNERS  train_head.py
Serve_pipeline_model/cicd/: Jenkinsfile  config.yml
Serve_pipeline_model/src/: data.py  utils.py
Tag_predictor/: final.py  fine_tune.py  my_model.py  pred.py  pred2.py  tag_bert.ipynb
